<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewFotos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".permisos.PermisosFotosActivity">

    <Button
        android:id="@+id/bPermFotElegirFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/strSeleccionarFecha" />

    <Button
        android:id="@+id/bPermFotRestarFecha"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/strRestar" />

    <Button
        android:id="@+id/bPermFotSumarFecha"
        android:layout_width="38dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="76dp"
        android:layout_marginTop="20dp"
        android:text="@string/strSumar" />

    <ImageView
        android:id="@+id/imgPermFotImagen"
        android:layout_width="340dp"
        android:layout_height="520dp"
        android:layout_below="@id/bPermFotElegirFecha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#E0E0E0"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

</RelativeLayout>