<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CompraAddElemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/strNombreElemento"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etxtCompraElemNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/textView2"
            android:ems="10"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/strCategoria"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spnCompraElemCategoria"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/textView3" />
    </RelativeLayout>

    <Button
        android:id="@+id/bCompraElemAgregarCtg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/strCrearCategoria" />

    <Button
        android:id="@+id/bCompraElemAgregarElem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/strAñadirElemento" />

</LinearLayout>