<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical"
    tools:context=".divisas.DivisasActivity">

    <TextView
        android:id="@+id/txtDivisasTitulo"
        style="@style/TEXTO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/strConversorDivisad"
        android:textSize="34sp" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDivisasTitulo"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            style="@style/TEXTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strCantidad"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/etxtMainCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            style="@style/TEXTO"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/strDe"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spnMainDivisaInicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dropDownWidth="200dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            style="@style/TEXTO"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/strA2"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spnMainDivisalFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/bDivisasIntercambiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3"
        android:text="Intercambiar Divisas" />

    <Button
        android:id="@+id/bDivisasCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bDivisasIntercambiar"
        android:layout_marginTop="60dp"
        android:text="@string/strCalcular" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDivisasCuadro"
        style="@style/CARDVIEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bDivisasCalcular"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/txtDivisasResultado"
            style="@style/TEXTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bDivisasCalcular"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textSize="23sp" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>